Address PR 637 connector review findings